[gd_scene load_steps=4 format=3 uid="uid://c2a7dpwhxlt7y"]

[ext_resource type="Script" uid="uid://cdfggpwyyd1s3" path="res://main_game/scripts/game_start.gd" id="1_aeun4"]
[ext_resource type="FontFile" uid="uid://jbigouy4krny" path="res://misc/assets/fonts/Robus-BWqOd.otf" id="2_y1m6u"]

[sub_resource type="LabelSettings" id="LabelSettings_aeun4"]
font = ExtResource("2_y1m6u")
font_size = 72
font_color = Color(0.752941, 0.752941, 0.752941, 1)
shadow_size = 2
shadow_color = Color(0, 0.0745098, 0.819608, 0)

[node name="GameStart" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_aeun4")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 1.0
offset_right = 174.0
offset_bottom = 24.0
text = "Welcome to the Game"
label_settings = SubResource("LabelSettings_aeun4")

[node name="PlayButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.0
offset_top = -15.5
offset_right = 37.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Play"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 9.0
offset_top = 69.0
offset_right = 82.0
offset_bottom = 100.0
text = "Quit"
